--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,8 +1,13 @@
 linters:
   disable-all: true
   enable:
-  - revive
-
+    - gocyclo
+    - gofmt
+    - goimports
+    - govet
+    - ineffassign
+    - misspell
+    - revive
 output:
   sort-results: true
 
