--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -15,6 +15,10 @@ issues:
   exclude-use-default: false
   max-issues-per-linter: 0
   max-same-issues: 0
+  exclude-rules:
+    - path: gen\.go
+      linters:
+        - gocyclo
 
 linters-settings:
   revive:
