--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: My test
-        run:
+        run: |
             echo $PATH
             echo $GOPATH
             echo $(go env GOPATH)
