--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,8 +15,7 @@ jobs:
         - name: Set up Go
           uses: actions/setup-go@v3
           with:
-            go-version: "1.20"
-              #go-version-file: 'go.mod'
+            go-version-file: 'go.mod'
         - name: Install terraform
           run: make tools.terraform
             #- name: Run linter
